# Microbenchmarks

./: .gitignore  LICENSE  Makefile  Project.toml  README.md  go.mod  perf.R  perf.c  perf.do  perf.f90  perf.go  perf.inp  perf.jl  perf.js  perf.lua  perf.m  perf.nb  perf.py  perfutil.jl
.github/workflows/: benchmarks.yml  test-numba.yml
c/: perf.c
dev/: .documenter-siteinfo.json  benchmarks.csv  index.html  objects.inv  search_index.js
dev/benchmarks/: index.html
dev/notes/: index.html
dev/versions/: index.html
docs/: Project.toml  make.jl
docs/src/: index.md  notes.md
fortran/: perf.f90
go/: perf.go
java/: pom.xml  setup.sh
javascript/: perf.js
julia/: perf.jl
lua/: lua-install.sh  perf.lua
numba/: perf.py
octave/: perf.m
previews/PR100/: .documenter-siteinfo.json  benchmarks.csv  index.html  search_index.js  siteinfo.js
previews/PR101/: .documenter-siteinfo.json  benchmarks.csv  index.html  objects.inv  search_index.js  siteinfo.js
previews/PR102/: .documenter-siteinfo.json  benchmarks.csv  index.html  objects.inv  search_index.js
previews/PR103/: .documenter-siteinfo.json  benchmarks.csv  index.html  search_index.js
previews/PR104/: .documenter-siteinfo.json  benchmarks.csv  search_index.js
previews/PR105/: .documenter-siteinfo.json  benchmarks.csv  index.html  search_index.js
previews/PR106/: .documenter-siteinfo.json  (+3 more)
python/: perf.py
r/: perf.R
rust/: Cargo.toml  build.rs
rust/src/: direct_blas.rs  main.rs  util.rs
scala/: .gitignore  build.sbt
src/: Microbenchmarks.jl
swift/: Package.swift  main.swift
(+136 files in other folders)
