[package]
name = "julia-bench"
publish = false
version = "0.1.0"

[dependencies]
itertools = "0.7.1"
mersenne_twister = "1.1.1"
num = "0.1.37"
rand = "0.4.2"

[dependencies.cblas]
version = "0.1.2"
optional = true

[dependencies.cblas-sys]
version = "0.1.4"

[dependencies.ndarray]
features = ["blas"]
version = "0.11.1"

[dependencies.blas-src]
features = ["openblas"]
default-features = false
version = "0.1.2"

[dependencies.openblas-src]
features = ["cblas", "system"]
default-features = false
version = "0.5.6"

[features]
default = []
direct_blas = ["cblas"]
