[package]
name = "julia-bench"
publish = false
version = "0.1.0"
edition = "2021"

[dependencies]
num = "0.4"
rand = "0.8"
rand_mt = "4"

[dependencies.cblas]
version = "0.4"
optional = true

[dependencies.cblas-sys]
version = "0.1.4"

[dependencies.ndarray]
features = ["blas"]
version = "0.16"

[dependencies.blas-src]
features = ["openblas"]
default-features = false
version = "0.10"

[dependencies.openblas-src]
features = ["cblas", "system"]
default-features = false
version = "0.10"

[features]
default = []
direct_blas = ["cblas"]
